# ai-qa-framework

./: pyproject.toml  qa-config.json.example
.github/workflows/: ci.yml
src/: cli.py  git_context.py  orchestrator.py
src/ai/: client.py
src/ai/prompts/: planning.py
src/models/: config.py
src/planner/: planner.py
tests/: conftest.py  test_ai_client.py  test_integration.py  test_models_config.py
